# jacro-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  pyproject.toml  releaser_history.json  rpm.store  setup.cfg  tracks.yaml
.github/workflows/: build_and_test.yaml  format.yaml
debian/: changelog  control  copyright  gbp.conf  rules
jacro/: __init__.py  cli.py  template_processor.py
rpm/: ros-kilted-jacro.spec  ros-rolling-jacro.spec
tests/: jacro_test.py  ros2_controllers.yaml.j2
